--- a/auth-view.phtml
+++ b/auth-view.phtml
@@ -52,11 +52,11 @@
                             <input type="password" name="pass" class="form-control" placeholder="password" required />
                         </div>
 
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" name="rememberMe" value="1" checked /> Remember me
-                            </label>
-                        </div>
+<!--                        <div class="checkbox">-->
+<!--                            <label>-->
+<!--                                <input type="checkbox" name="rememberMe" value="1" checked /> Remember me-->
+<!--                            </label>-->
+<!--                        </div>-->
 
                         <input type="submit" value="Sign In" class="btn btn-primary"/>
 
